--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "dependencies": {
     "@types/express": "^4.17.2",
     "@types/node": "^13.7.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.2",
+    "pg": "^7.18.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.4",
+    "sequelize-auto-migrations": "^1.0.3",
+    "sequelize-cli": "^5.5.1",
     "ts-node": "^8.6.2",
     "tsc": "^1.20150623.0",
     "typescript": "^3.7.5"
