--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "dependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.2",
+    "@types/express-session": "^1.15.16",
     "@types/node": "^13.7.1",
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "nodemon": "^2.0.2",
     "pg": "^7.18.1",
     "pg-hstore": "^2.3.3",
