--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.15.16",
     "@types/node": "^13.7.1",
+    "@types/sequelize": "^4.28.8",
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
