--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/express-session": "^1.15.16",
     "@types/node": "^13.7.1",
     "@types/sequelize": "^4.28.8",
+    "@types/socket.io": "^2.1.4",
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
@@ -23,6 +24,7 @@
     "sequelize": "^5.21.4",
     "sequelize-auto-migrations": "^1.0.3",
     "sequelize-cli": "^5.5.1",
+    "socket.io": "^2.3.0",
     "ts-node": "^8.6.2",
     "tsc": "^1.20150623.0",
     "typescript": "^3.7.5"
