--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^13.7.1",
     "@types/sequelize": "^4.28.8",
     "@types/socket.io": "^2.1.4",
+    "@types/uuid": "^3.4.7",
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
@@ -27,6 +28,7 @@
     "socket.io": "^2.3.0",
     "ts-node": "^8.6.2",
     "tsc": "^1.20150623.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "uuid": "^7.0.0"
   }
 }
