--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.15.16",
+    "@types/jsonwebtoken": "^8.3.8",
     "@types/node": "^13.7.1",
     "@types/sequelize": "^4.28.8",
     "@types/socket.io": "^2.1.4",
@@ -19,6 +20,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.2",
     "pg": "^7.18.1",
     "pg-hstore": "^2.3.3",
