--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "jsonwebtoken": "^8.5.1",
+    "kill-port": "^1.6.0",
     "lodash": "^4.17.15",
     "nodemon": "^2.0.2",
     "pg": "^7.18.1",
