--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "target": "es6",
         "noImplicitAny": false,
         "moduleResolution": "node",
-        "sourceMap": true,
+        "sourceMap": false,
         "outDir": "dist",
         "baseUrl": ".",
         "paths": {
@@ -18,6 +18,6 @@
         }
     },
     "include": [
-        "src/**/*"
+        "src/**/*", "dist/public"
     ]
 }
