--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "start": "node dist/index.js",
     "build": "tsc && node copyfiles.js",
     "start-dev": "nodemon",
-    "sync": "ts-node src/db/config/sync"
+    "sync": "ts-node src/db/config/sync",
+    "heroku-prebuild": "export NPM_CONFIG_PRODUCTION=false; export NODE_ENV=; NPM_CONFIG_PRODUCTION=false NODE_ENV=development npm install --only=dev --dev",
+    "heroku-postbuild": "yarn build && export NPM_CONFIG_PRODUCTION=true; export NODE_ENV=production;"
   },
   "devDependencies": {
     "tsc": "^1.20150623.0",
     "typescript": "^3.7.5",
-    "kill-port": "^1.6.0",
-    "heroku-prebuild": "export NPM_CONFIG_PRODUCTION=false; export NODE_ENV=; NPM_CONFIG_PRODUCTION=false NODE_ENV=development npm install --only=dev --dev",
-    "heroku-postbuild": "yarn build && export NPM_CONFIG_PRODUCTION=true; export NODE_ENV=production;"
+    "kill-port": "^1.6.0"
   }
 }
